@@ -497,6 +497,10 @@ u'\u4001abc'
 >>>
 \end{verbatim}
 
+\item The \method{startswith()} and \method{endswith()}
+string methods now have accept negative numbers for
+start and end parameters.
+
 \item Another new string method is \method{zfill()}, originally a
 function in the \module{string} module.  \method{zfill()} pads a
 numeric string with zeros on the left until it's the specified width.
